# 5_c_command_parser

./: CMakeLists.txt  README.md
device_action/: device_action.c  device_action.h
examples/: main.c
include/: command_parser.h  device_state.h
src/: command_parser.c  device_state.c
tests/: test_command_parser.c
